# TigerC

./: .gitignore  CMakeLists.txt  README.md
include/datatypes/: A_binop.h  A_exp.h  A_exp_list.h  A_stm.h
include/functional_datastructures/: bst.h
include/interp_functions/: interp_functions.h
include/lexical_analysis/: scanner_utils.h  tokens.h  utils.h
src/: main.c
src/datatypes/: A_exp.c  A_exp_list.c  A_stm.c
src/functional_datastructures/: bst.c
src/interp_functions/: interp_functions.c
src/lexical_analysis/: CMakeLists.txt
src/lexical_analysis/lexer_runs/: runner.py
src/lexical_analysis/src/: driver.c  lex.yy.c  ml  scanner_utils.c  tiger.flex  tokens.c  utils.c
src/lexical_analysis/tiger_examples/: simp.tig
src/parsing/: CMakeLists.txt
src/parsing/src/: driver.c  tiger.grm
test/: CMakeLists.txt
test/include/functional_datastructures/: utils.h
test/src/: test_functional_datastructures_bst.c  test_functional_datastrucutres_bst.tests.c
test/src/functional_datastructures_bst/: CMakeLists.txt  tests.c  utils.c
test/src/interpret_functions/: CMakeLists.txt  tests.c
test/tests/: functional_datastructures_bst  interpret_functions
tiger_examples/: simp.tig
